# msync

./: .dockerignore  Makefile  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: pr-unit-tests.yaml  publish-container.yaml
docker/: Dockerfile  docker-compose.external-db.yaml  docker-compose.yaml
plugins/msync/.claude-plugin/: plugin.json
plugins/msync/.codex-plugin/: plugin.json
plugins/msync/hooks/: hooks.json
plugins/msync/skills/recall-history/: SKILL.md
plugins/msync/skills/recall-history/agents/: openai.yaml
plugins/msync/skills/recall-history/scripts/: remote_history.py
src/msync/: __init__.py  __main__.py  cli.py  database.py  docker_entrypoint.py  hooks.py  models.py  readers.py  remote.py  server.py  synchronization.py  tables.py
src/msync/providers/: __init__.py  base.py  claude.py  codex.py
src/msync/schemas/: __init__.py  base.py  claude.py  codex.py
src/msync/web/: __init__.py  app.js  index.html  login.html  styles.css
tests/: test_archive.py  test_cli.py  test_database_backends.py  test_docker_entrypoint.py  test_hooks.py  test_postgres_sync.py  test_providers.py  test_recall_history_skill.py  test_schemas.py  test_server.py  test_sync.py
