[project]
name = "msync"
version = "0.1.0"
description = "Archive and search local AI chat histories"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "veinkr-bot", email = "262730805+veinkr-bot@users.noreply.github.com" }
]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.116",
    "httpx>=0.28",
    "pydantic>=2.11",
    "psycopg[binary]>=3.2",
    "rich>=13.9",
    "sqlalchemy>=2.0.41",
    "typer>=0.16",
    "uvicorn>=0.35",
]

[project.scripts]
msync = "msync:main"

[project.optional-dependencies]
mysql = [
    "pymysql>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
